--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>com.possumus</groupId>
 	<artifactId>repeatsequence</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-RC1</version>
 	<packaging>war</packaging>
 	<name>Repeat Sequence</name>
 	<description>Technical Evaluation Possumus</description>
